# zzwRepository

./: README.md  build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/jni/: CMakeLists.txt  myjni.c  vectortest.cpp  zzwjni.c
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/test/zzw/zzwapp/bean/: Person.aidl  Salary.aidl
app/src/main/java/com/test/zzw/zzwapp/: Api.java  MainActivity.java  MyApplication.java
app/src/main/java/com/test/zzw/zzwapp/activity/: AIDLComplexActivity.java  DataBindingActivity.java  DrawerLayoutActivity.java  IjkPlayerActivity.java  MainActivity.java  MutiLayoutAdActivity.java  MyBaseAppCompatActivity.java  RxJavaTestActivity.java  TestAIDLActivity.java  TestAIDLDDActivity.java  TestActivity.java  TestAdActivity.java  TestBindSerActivity.java  TransactActivity.java  modelActivity.java
app/src/main/java/com/test/zzw/zzwapp/bean/: Person.java  PersonBean.java  ResultHttpDif.java
app/src/main/java/com/test/zzw/zzwapp/httpentity/: LoginResponse.java  UserBaseInfoResponse.java  UserExtraInfoRequest.java  UserInfo.java
app/src/main/java/com/test/zzw/zzwapp/jni/: JNIUtils.java
app/src/main/res/layout/: activity_databinding.xml  activity_player.xml  activity_rxjava.xml  activity_test_btns_tvs.xml  activity_testaibl.xml  app_adapter_main.xml  app_bar_main.xml  content_main.xml  editscrollview.xml  frag_databinding.xml  item_one.xml  item_recyclerview.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/xml/: settings.xml
app2/: build.gradle
app3/: CMakeLists.txt
(+116 files in other folders)
